--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
         "express": "3.4.7",
         "logfmt": "*",
         "ejs": "*",
-        "socket.io": "*"
+        "socket.io": "1.0"
     }
 }
